2017-03-17  Bruno Haible  <bruno@clisp.org>

	Update to the newest gnulib.
	Ran "make -f Makefile.devel build-aux-update gnulib-imported
	build-prerequisites".
	* gllib/*: Update from gnulib.
	* glm4/*: Likewise.
	* aclocal.m4, src/configure: Regenerated.

2017-03-17  Bruno Haible  <bruno@clisp.org>

	Fix build failures with --with-debug on NetBSD.
	* unix.d: Include <sys/ioctl.h> always. Needed to get ioctl() declared.
	* foreign.d (FOREIGN-POINTER-INFO): Cast dli.dli_saddr, possibly a
	'const void *', to 'void *'.
	* lispbibl.d (dotimes_called_with_count_of_wrong_size): Export to
	clisp.h.

2017-03-17  Bruno Haible  <bruno@clisp.org>

	Don't test unportable features in "make check".
	* makemake.in: Generate a new target 'extracheck'. Let 'extracheck', not
	'check', depend on 'check-exec-image'.

2017-03-17  Bruno Haible  <bruno@clisp.org>

	Fix build failure on Linux/arm.
	* arilev0.d (mulu32_, divu_3216_1616_, divu_3216_3216_, divu_3232_3232_,
	divu_6432_3232_, divu_6432_6432_, divu_6464_6464_): When defined in
	lisparit.o, add a suffix to the symbol. This avoids a link-time
	collision with ari*.o.

2017-03-16  Bruno Haible  <bruno@clisp.org>

	Fix build failure on 64-bit HP-UX without -DNO_ARI_ASM.
	* lispbibl.d (HPPA64): New macro.
	* arilev0.d: Exclude HPPA64 when testing for HPPA.
	* intlog.d: Likewise.

2017-03-16  Bruno Haible  <bruno@clisp.org>

	Fix build failure on 64-bit HP-UX with -DNO_ARI_ASM.
	* intlog.d (integerlength32) [HPPA]: Test NO_ARI_ASM, not NO_ASM.

2017-03-16  Bruno Haible  <bruno@clisp.org>

	Enable the '-mm' option also on HP-UX.
	* spvw_mmap.d (dump_process_memory_map_callback,
	dump_process_memory_map): Move from here...
	* spvw.d (dump_process_memory_map_callback, dump_process_memory_map):
	... to here.

2017-03-16  Bruno Haible  <bruno@clisp.org>

	Fix build failure on HP-UX.
	* makemake.in (with_dynamic_modules): Default to 'no' on HP-UX.

2017-03-16  Bruno Haible  <bruno@clisp.org>

	Fix build failure with HP-UX cc and Sun cc.